tests/negative/syntax/unclosed_paren.stream
// EXPECT: Syntax Error
print(10; // Missing ')'